[gd_scene load_steps=9 format=3 uid="uid://dxbd23grq477d"]

[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://Themes/rootTheme.tres" id="1_x0ob1"]
[ext_resource type="Script" path="res://Scripts/Menus/PauseMenu/PauseMenu.gd" id="2_mu5pd"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://Themes/titleTextTheme.tres" id="2_uieg0"]
[ext_resource type="Texture2D" uid="uid://dgkky8sonbl42" path="res://Graphics/items/book.png" id="3_eh716"]
[ext_resource type="Texture2D" uid="uid://cmmmjjhb77ud5" path="res://Graphics/items/generic_sword.png" id="3_qbnw8"]
[ext_resource type="Texture2D" uid="uid://cb2v3o0a0i0ws" path="res://Graphics/ui/quest_pin_pinned.png" id="4_f38nu"]
[ext_resource type="Texture2D" uid="uid://68gav8dpyr0p" path="res://Graphics/structures/house.png" id="4_kdiyj"]
[ext_resource type="Texture2D" uid="uid://id2gjt271bko" path="res://Graphics/ui/ui_target_unselected.png" id="6_kgfeg"]

[node name="PauseMenu" type="Node2D"]
script = ExtResource("2_mu5pd")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 960.0
theme = ExtResource("1_x0ob1")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseTitle" type="RichTextLabel" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -152.0
offset_top = 12.0
offset_right = 153.0
offset_bottom = 12.0
grow_horizontal = 2
theme = ExtResource("2_uieg0")
bbcode_enabled = true
text = "[center]Paused[/center]"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="ResumeButton" type="Button" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "Resume"
icon = ExtResource("3_qbnw8")
expand_icon = true

[node name="MapButton" type="Button" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "Map"
icon = ExtResource("4_f38nu")
expand_icon = true

[node name="CodexButton" type="Button" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "Codex"
icon = ExtResource("3_eh716")
expand_icon = true

[node name="SettingsButton" type="Button" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "Settings"
icon = ExtResource("6_kgfeg")
expand_icon = true

[node name="SaveQuitButton" type="Button" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "Save & Quit"
icon = ExtResource("4_kdiyj")

[connection signal="pressed" from="Control/Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/SaveQuitButton" to="." method="_on_save_quit_button_pressed"]
